edit values file

--- a/kubeapps/values.yaml
+++ b/kubeapps/values.yaml
@@ -138,7 +138,7 @@ frontend:
   service:
     ## Service type
     ##
-    type: ClusterIP
+    type: LoadBalancer
     ## HTTP Port
     ##
     port: 80
