--- a/config/tkg-cluster.yaml
+++ b/config/tkg-cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: run.tanzu.vmware.com/v1alpha1      #TKG API endpoint
 kind: TanzuKubernetesCluster                   #required parameter
 metadata:
-  name: tanzucl2                          #cluster name, user defined
+  name: tanzuc-eseday-cl1                          #cluster name, user defined
   namespace: tools                     #supervisor namespace
 spec:
   distribution:
