changed tkg to tkc

--- a/argocd-config/tkc-app.yaml
+++ b/argocd-config/tkc-app.yaml
@@ -12,6 +12,6 @@ spec:
       prune: false
       selfHeal: false
   source:
-    path: 
+    path: tkg-config 
     repoURL: https://github.com/beyondelastic/gitops-tkgs.git
     targetRevision: HEAD
