changed tkc config yaml

--- a/tkc-config/tkc-cluster.yaml
+++ b/tkc-config/tkc-cluster.yaml
@@ -1,11 +1,11 @@
 apiVersion: run.tanzu.vmware.com/v1alpha1      #TKG API endpoint
 kind: TanzuKubernetesCluster                   #required parameter
 metadata:
-  name: tanzuc-eseday-cl1                          #cluster name, user defined
+  name: tkc-argo-1                          #cluster name, user defined
   namespace: tools                     #supervisor namespace
 spec:
   distribution:
-    version: v1.18.15                             #resolved kubernetes version
+    version: v1.19                             #resolved kubernetes version
   topology:
     controlPlane:
       count: 1                                 #number of control plane nodes
@@ -15,4 +15,9 @@ spec:
       count: 1                                 #number of worker nodes
       class: best-effort-small                 #vmclass for worker nodes
       storageClass: gold         #storageclass for worker nodes
-
+  settings:
+    storage:
+      defaultClass: gold
+    network:
+      cni:
+        name: antrea
