changed argo app path

--- a/argocd-config/tkc-app.yaml
+++ b/argocd-config/tkc-app.yaml
@@ -12,6 +12,6 @@ spec:
 #      prune: false
 #      selfHeal: false
   source:
-    path: tkg-config 
+    path: tkc-config 
     repoURL: https://github.com/beyondelastic/gitops-tkgs.git
     targetRevision: HEAD
