--- a/tkc-config/tkc-cluster.yaml
+++ b/tkc-config/tkc-cluster.yaml
@@ -2,22 +2,22 @@ apiVersion: run.tanzu.vmware.com/v1alpha1      #TKG API endpoint
 kind: TanzuKubernetesCluster                   #required parameter
 metadata:
   name: tkc-argo-1                          #cluster name, user defined
-  namespace: tools                     #supervisor namespace
+  namespace: tanzu-19-ns                     #supervisor namespace
 spec:
   distribution:
-    version: v1.19                             #resolved kubernetes version
+    version: v1.23.8                             #resolved kubernetes version
   topology:
     controlPlane:
       count: 1                                 #number of control plane nodes
       class: best-effort-small                 #vmclass for control plane nodes
       storageClass: gold         #storageclass for control plane
     workers:
-      count: 1                                 #number of worker nodes
+      count: 3                                 #number of worker nodes
       class: best-effort-small                 #vmclass for worker nodes
-      storageClass: gold         #storageclass for worker nodes
+      storageClass: tanzu         #storageclass for worker nodes
   settings:
     storage:
-      defaultClass: gold
+      defaultClass: tanzu
     network:
       cni:
         name: antrea
